# perception-recruiting-test

./: .gitignore  CMakeLists.txt  README.md
debugTools/: TresholdFinder.py
include/: Cone.hpp  Detector.hpp
src/: Cone.cpp  Detector.cpp  main.cpp
